minor change to workflow file

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -2,8 +2,7 @@ name: Tests
 
 push:
     branches:
-      - master
-      - 'platform-api_release_*'
+      - main
   pull_request:
     branches:
       - '**'
