--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,6 +13,9 @@ jobs:
     name: Running tests
     runs-on: ubuntu-latest
     steps:
+      # checkout the code
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Start redis service
         run: |
           ls
